Service YAML FIles/service-cifar10.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: preprocess-and-train-cifar10
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/metric: "concurrency"
        autoscaling.knative.dev/target: "200"  
    spec:
      containers:
      - image: akashsane18/project-repo:preprocess-and-train-cifar10
        ports:
        - containerPort: 80
        env:
          - name: GOOGLE_APPLICATION_CREDENTIALS
            value: /var/secrets/google/key.json
        readinessProbe:
          httpGet:
            path: /health
        volumeMounts:
          - name: google-credentials-volume
            mountPath: /var/secrets/google
            readOnly: true
      volumes:
        - name: google-credentials-volume
          secret:
            secretName: google-credentials
