Service YAML FIles/service-predict.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: predict
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/metric: "concurrency"
        autoscaling.knative.dev/target: "200"
    spec:
      containers:
      - image: akashsane18/project-repo:predict
        ports:
        - containerPort: 80
        env:
          - name: GOOGLE_APPLICATION_CREDENTIALS
            value: /var/secrets/google/key.json
        readinessProbe:
          httpGet:
            path: /health
        volumeMounts:
          - name: google-credentials-volume
            mountPath: /var/secrets/google
            readOnly: true
      volumes:
        - name: google-credentials-volume
          secret:
            secretName: google-credentials
