Service YAML FIles/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: knative-ingress-vs
  namespace: istio-system
spec:
  hosts:
  - "*" 
  gateways:
  - knative-ingress-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: 10.96.205.186 
        port:
          number: 80
